Fix spacing above filter in filter_horizontal
--HG--
extra : rebase_source : c32f0664d73ce78075403244d0d9b137d47613ae

--- a/grappelli_safe/static/grappelli/css/widgets.css
+++ b/grappelli_safe/static/grappelli/css/widgets.css
@@ -41,6 +41,9 @@
     -moz-border-radius-topleft: 0; -webkit-border-top-left-radius: 0; border-top-left-radius: 0;
     -moz-border-radius-topright: 0; -webkit-border-top-right-radius: 0; border-top-right-radius: 0;
 }
+.selector .selector-filter label {
+    padding-bottom: 0;
+}
 .selector .selector-filter input[type=text] {
     position: relative;
     margin: 0 0 0 25px;
